[gd_scene load_steps=2 format=3 uid="uid://bc0row32cr327"]

[ext_resource type="Script" path="res://settings_window.gd" id="1_hdyp5"]

[node name="VBoxContainer" type="VBoxContainer"]
offset_right = 56.0
offset_bottom = 46.0
script = ExtResource("1_hdyp5")

[node name="PlayerSpeedContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="PlayerSpeedContainer"]
layout_mode = 2
text = "Player Speed: "

[node name="LineEdit" type="LineEdit" parent="PlayerSpeedContainer"]
layout_mode = 2

[node name="ShootDelayContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="ShootDelayContainer"]
layout_mode = 2
text = "Shoot Delay: "

[node name="LineEdit" type="LineEdit" parent="ShootDelayContainer"]
layout_mode = 2

[node name="StartingHealthContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StartingHealthContainer"]
layout_mode = 2
text = "Starting Health: "

[node name="LineEdit" type="LineEdit" parent="StartingHealthContainer"]
layout_mode = 2

[node name="InvincibleContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="InvincibleContainer"]
layout_mode = 2
text = "Invincible: "

[node name="CheckBox" type="CheckBox" parent="InvincibleContainer"]
layout_mode = 2

[connection signal="text_changed" from="PlayerSpeedContainer/LineEdit" to="." method="_on_player_speed_edit_text_changed"]
[connection signal="text_changed" from="ShootDelayContainer/LineEdit" to="." method="_on_shoot_delay_line_edit_text_changed"]
[connection signal="text_changed" from="StartingHealthContainer/LineEdit" to="." method="_on_starting_health_line_edit_text_changed"]
[connection signal="toggled" from="InvincibleContainer/CheckBox" to="." method="_on_invincible_check_box_toggled"]
